[package]
name = "dankbytes"
authors = ["alefnull"]
description = "A sloppy recreation of the old 'Dope Wars' game"
categories = ["games", "gui", "simulation"]
keywords = ["game", "trading", "simulation", "egui", "dopewars"]
license = "MIT"
readme = "README.md"
version = "0.0.1"
edition = "2024"
build = "build.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
winres = "0.1.12"

[dependencies]
eframe = "0.31.1"
egui_extras = "0.31.1"
rand = "0.9.1"
thousands = "0.2.0"

